dlp2/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, DATA=35, CODE=36, PRINT=37, INT=38, FLOAT=39, 
		CHAR_CONSTANT=40, INT_CONSTANT=41, REAL_CONSTANT=42, IDENT=43, LINE_COMMENT=44, 
		MULTILINE_COMMENT=45, WHITESPACE=46;
	public static final int
		RULE_start = 0, RULE_opt_defs = 1, RULE_definition = 2, RULE_opt_params = 3, 
		RULE_param = 4, RULE_sentence = 5, RULE_tipo = 6, RULE_tipo_simple = 7, 
		RULE_opt_sentences = 8, RULE_opt_record_defs = 9, RULE_record_def = 10, 
		RULE_opt_exprs = 11, RULE_expr = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "opt_defs", "definition", "opt_params", "param", "sentence", 
			"tipo", "tipo_simple", "opt_sentences", "opt_record_defs", "record_def", 
			"opt_exprs", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "'('", "')'", "'{'", "'}'", "'struct'", 
			"','", "'printsp'", "'println'", "'read'", "'='", "'while'", "'if'", 
			"'else'", "'return'", "'char'", "'['", "']'", "'.'", "'<'", "'>'", "'-'", 
			"'!'", "'*'", "'/'", "'+'", "'=='", "'>='", "'<='", "'!='", "'&&'", "'||'", 
			"'DATA'", "'CODE'", "'print'", "'int'", "'float'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "DATA", 
			"CODE", "PRINT", "INT", "FLOAT", "CHAR_CONSTANT", "INT_CONSTANT", "REAL_CONSTANT", 
			"IDENT", "LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public Opt_defsContext opt_defs;
		public Opt_defsContext opt_defs() {
			return getRuleContext(Opt_defsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			((StartContext)_localctx).opt_defs = opt_defs();
			setState(27);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).opt_defs.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_defsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DefinitionContext definition;
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public Opt_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_defs; }
	}

	public final Opt_defsContext opt_defs() throws RecognitionException {
		Opt_defsContext _localctx = new Opt_defsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_opt_defs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					((Opt_defsContext)_localctx).definition = definition();
					_localctx.list.add(((Opt_defsContext)_localctx).definition.ast); 
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public Definition ast;
		public Token IDENT;
		public TipoContext tipo;
		public Opt_paramsContext opt_params;
		public Tipo_simpleContext tipo_simple;
		public Opt_defsContext opt_defs;
		public Opt_sentencesContext opt_sentences;
		public Opt_record_defsContext opt_record_defs;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Opt_paramsContext opt_params() {
			return getRuleContext(Opt_paramsContext.class,0);
		}
		public Opt_defsContext opt_defs() {
			return getRuleContext(Opt_defsContext.class,0);
		}
		public Opt_sentencesContext opt_sentences() {
			return getRuleContext(Opt_sentencesContext.class,0);
		}
		public Tipo_simpleContext tipo_simple() {
			return getRuleContext(Tipo_simpleContext.class,0);
		}
		public Opt_record_defsContext opt_record_defs() {
			return getRuleContext(Opt_record_defsContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		int _la;
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(T__0);
				setState(39);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(40);
				match(T__1);
				setState(41);
				((DefinitionContext)_localctx).tipo = tipo();
				setState(42);
				match(T__2);
				 ((DefinitionContext)_localctx).ast =  new VarDefinition(((DefinitionContext)_localctx).tipo.ast, ((DefinitionContext)_localctx).IDENT); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(46);
				match(T__3);
				setState(47);
				((DefinitionContext)_localctx).opt_params = opt_params();
				setState(48);
				match(T__4);
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(49);
					match(T__1);
					setState(50);
					((DefinitionContext)_localctx).tipo_simple = tipo_simple();
					}
				}

				setState(53);
				match(T__5);
				setState(54);
				((DefinitionContext)_localctx).opt_defs = opt_defs();
				setState(55);
				((DefinitionContext)_localctx).opt_sentences = opt_sentences();
				setState(56);
				match(T__6);
				 ((DefinitionContext)_localctx).ast =  new FunctionDef(	
					((DefinitionContext)_localctx).IDENT, new FunctionType(_localctx.tipo_simple != null ? ((DefinitionContext)_localctx).tipo_simple.ast : null, ((DefinitionContext)_localctx).opt_params.list), ((DefinitionContext)_localctx).opt_defs.list, ((DefinitionContext)_localctx).opt_sentences.list); 
					_localctx.ast.setPositions(_localctx.start); 
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(T__7);
				setState(60);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(61);
				match(T__5);
				setState(62);
				((DefinitionContext)_localctx).opt_record_defs = opt_record_defs();
				setState(63);
				match(T__6);
				setState(64);
				match(T__2);
				 ((DefinitionContext)_localctx).ast =  new StructDef(((DefinitionContext)_localctx).IDENT, ((DefinitionContext)_localctx).opt_record_defs.list); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_paramsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public ParamContext e1;
		public ParamContext e2;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public Opt_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_params; }
	}

	public final Opt_paramsContext opt_params() throws RecognitionException {
		Opt_paramsContext _localctx = new Opt_paramsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_opt_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(69);
				((Opt_paramsContext)_localctx).e1 = param();
				_localctx.list.add(((Opt_paramsContext)_localctx).e1.ast); 
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(71);
					match(T__8);
					setState(72);
					((Opt_paramsContext)_localctx).e2 = param();
					_localctx.list.add(((Opt_paramsContext)_localctx).e2.ast); 
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Definition ast;
		public Token IDENT;
		public Tipo_simpleContext tipo_simple;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public Tipo_simpleContext tipo_simple() {
			return getRuleContext(Tipo_simpleContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((ParamContext)_localctx).IDENT = match(IDENT);
			setState(83);
			match(T__1);
			setState(84);
			((ParamContext)_localctx).tipo_simple = tipo_simple();
			((ParamContext)_localctx).ast =  new VarDefinition(((ParamContext)_localctx).tipo_simple.ast, ((ParamContext)_localctx).IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Sentence ast;
		public ExprContext expr;
		public ExprContext l;
		public ExprContext r;
		public Opt_sentencesContext opt_sentences;
		public Opt_sentencesContext if_sentences;
		public Opt_sentencesContext else_sentences;
		public Token IDENT;
		public Opt_exprsContext opt_exprs;
		public TerminalNode PRINT() { return getToken(GrammarParser.PRINT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Opt_sentencesContext> opt_sentences() {
			return getRuleContexts(Opt_sentencesContext.class);
		}
		public Opt_sentencesContext opt_sentences(int i) {
			return getRuleContext(Opt_sentencesContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public Opt_exprsContext opt_exprs() {
			return getRuleContext(Opt_exprsContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentence);
		int _la;
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(PRINT);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << CHAR_CONSTANT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT))) != 0)) {
					{
					setState(88);
					((SentenceContext)_localctx).expr = expr(0);
					}
				}

				setState(91);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new Print(_localctx.expr != null ? ((SentenceContext)_localctx).expr.ast: null, 1); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(T__9);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << CHAR_CONSTANT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT))) != 0)) {
					{
					setState(94);
					((SentenceContext)_localctx).expr = expr(0);
					}
				}

				setState(97);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new Print(_localctx.expr != null ? ((SentenceContext)_localctx).expr.ast: null, 2); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(T__10);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << CHAR_CONSTANT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT))) != 0)) {
					{
					setState(100);
					((SentenceContext)_localctx).expr = expr(0);
					}
				}

				setState(103);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new Print(_localctx.expr != null ? ((SentenceContext)_localctx).expr.ast: null, 3); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				match(T__11);
				setState(106);
				((SentenceContext)_localctx).expr = expr(0);
				setState(107);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new Read(((SentenceContext)_localctx).expr.ast); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				((SentenceContext)_localctx).l = expr(0);
				setState(111);
				match(T__12);
				setState(112);
				((SentenceContext)_localctx).r = expr(0);
				setState(113);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new Assignment(((SentenceContext)_localctx).l.ast, ((SentenceContext)_localctx).r.ast); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				match(T__13);
				setState(117);
				match(T__3);
				setState(118);
				((SentenceContext)_localctx).expr = expr(0);
				setState(119);
				match(T__4);
				setState(120);
				match(T__5);
				setState(121);
				((SentenceContext)_localctx).opt_sentences = opt_sentences();
				setState(122);
				match(T__6);
				 ((SentenceContext)_localctx).ast =  new While(((SentenceContext)_localctx).expr.ast, ((SentenceContext)_localctx).opt_sentences.list); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				match(T__14);
				setState(126);
				match(T__3);
				setState(127);
				((SentenceContext)_localctx).expr = expr(0);
				setState(128);
				match(T__4);
				setState(129);
				match(T__5);
				setState(130);
				((SentenceContext)_localctx).if_sentences = opt_sentences();
				setState(131);
				match(T__6);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__15) {
					{
					setState(132);
					match(T__15);
					setState(133);
					match(T__5);
					setState(134);
					((SentenceContext)_localctx).else_sentences = opt_sentences();
					setState(135);
					match(T__6);
					}
				}

				 ((SentenceContext)_localctx).ast =  new IfElse(((SentenceContext)_localctx).expr.ast, ((SentenceContext)_localctx).if_sentences.list, 
				  	_localctx.else_sentences != null ? ((SentenceContext)_localctx).else_sentences.list : null
				  ); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(141);
				((SentenceContext)_localctx).IDENT = match(IDENT);
				setState(142);
				match(T__3);
				setState(143);
				((SentenceContext)_localctx).opt_exprs = opt_exprs();
				setState(144);
				match(T__4);
				setState(145);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new CallProcedure(((SentenceContext)_localctx).IDENT, ((SentenceContext)_localctx).opt_exprs.list); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(148);
				match(T__16);
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << CHAR_CONSTANT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT))) != 0)) {
					{
					setState(149);
					((SentenceContext)_localctx).expr = expr(0);
					}
				}

				setState(152);
				match(T__2);
				 ((SentenceContext)_localctx).ast =  new Return(_localctx.expr != null ? ((SentenceContext)_localctx).expr.ast: null); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public Type ast;
		public Token INT_CONSTANT;
		public TipoContext tipo;
		public Token IDENT;
		public TerminalNode FLOAT() { return getToken(GrammarParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(GrammarParser.INT, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo);
		try {
			setState(170);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				match(FLOAT);
				 ((TipoContext)_localctx).ast =  new RealType(); _localctx.ast.setPositions(_localctx.start); 
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				match(INT);
				 ((TipoContext)_localctx).ast =  new IntType(); _localctx.ast.setPositions(_localctx.start); 
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				match(T__17);
				 ((TipoContext)_localctx).ast =  new CharType(); _localctx.ast.setPositions(_localctx.start); 
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 4);
				{
				setState(162);
				match(T__18);
				setState(163);
				((TipoContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(164);
				match(T__19);
				setState(165);
				((TipoContext)_localctx).tipo = tipo();
				 ((TipoContext)_localctx).ast =  new ArrayType(((TipoContext)_localctx).INT_CONSTANT, ((TipoContext)_localctx).tipo.ast); _localctx.ast.setPositions(_localctx.start); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(168);
				((TipoContext)_localctx).IDENT = match(IDENT);
				 ((TipoContext)_localctx).ast =  new StructType((((TipoContext)_localctx).IDENT!=null?((TipoContext)_localctx).IDENT.getText():null)); _localctx.ast.setPositions(_localctx.start); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_simpleContext extends ParserRuleContext {
		public Type ast;
		public TerminalNode FLOAT() { return getToken(GrammarParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(GrammarParser.INT, 0); }
		public Tipo_simpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_simple; }
	}

	public final Tipo_simpleContext tipo_simple() throws RecognitionException {
		Tipo_simpleContext _localctx = new Tipo_simpleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_simple);
		try {
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				match(FLOAT);
				 ((Tipo_simpleContext)_localctx).ast =  new RealType(); _localctx.ast.setPositions(_localctx.start);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				match(INT);
				 ((Tipo_simpleContext)_localctx).ast =  new IntType(); _localctx.ast.setPositions(_localctx.start);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(176);
				match(T__17);
				 ((Tipo_simpleContext)_localctx).ast =  new CharType(); _localctx.ast.setPositions(_localctx.start);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_sentencesContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenceContext sentence;
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public Opt_sentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_sentences; }
	}

	public final Opt_sentencesContext opt_sentences() throws RecognitionException {
		Opt_sentencesContext _localctx = new Opt_sentencesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_opt_sentences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << PRINT) | (1L << CHAR_CONSTANT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(180);
				((Opt_sentencesContext)_localctx).sentence = sentence();
				 _localctx.list.add(((Opt_sentencesContext)_localctx).sentence.ast); 
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_record_defsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public Record_defContext record_def;
		public List<Record_defContext> record_def() {
			return getRuleContexts(Record_defContext.class);
		}
		public Record_defContext record_def(int i) {
			return getRuleContext(Record_defContext.class,i);
		}
		public Opt_record_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_record_defs; }
	}

